--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 { 
   "//": "Change name in line 3 =>  Change description in line 5 =>",
   "//": "change All in build",
-  "name": "YourNameApp",
+  "name": "dose-wtd-app",
   "version": "1.0.0",
   "description": "YourDescription",
   "main": "main.js",
